src/styles/global.css
/*
  The CSS for mikesusz.dev was created with inspiration from several sources, including:
	- The HackTheBox color scheme https://github.com/silofy/hackthebox
	- New Order's "Blue Monday" album cover https://en.wikipedia.org/wiki/Blue_Monday_%28New_Order_song%29#Packaging

	Primary colors include: #9F00FF, #004CFF, #FFAF00, #FF3E3E, #9FEF00
 */

:root {
	--link-color-initial: #5cecc6;
	--link-color-active: #004cff;
	--link-color-visited: #5cb2ff;

	--accent-color-1: #9fef00;
	--accent-color-2: #ff3e3e;
	--accent-color-3: #004cff;
	--accent-color-4: #ffaf00;
	--accent-color-5: #9f00ff;

	--background-accent: rgba(255, 255, 255, 0.04);

	--main-fg: #c5d1eb;
	--main-bg: #141d2b;
	--main-bg-gradient: linear-gradient(140deg, #0e141e 0%, #09182e 60%, #091930 80%, #0e151f 100%);
	--base-gap: 2rem;
	--base-pad: 1rem;
	--small-pad: 0.5rem;
	--big-pad: 2rem;

	--content-max-width: clamp(320px, 90%, 96ch);
}

/* light color scheme things */
@media (prefers-color-scheme: light) {
	:root {
		--main-fg: #141d2b;
		--main-bg: #c5d1eb;
		--main-bg-gradient: linear-gradient(
			140deg,
			#75a0e4fb 0%,
			#5a93e8 60%,
			#5a94eaf7 80%,
			#7da6e9f9 100%
		);

		--background-accent: rgba(0, 0, 0, 0.04);

		--link-color-initial: #0f2a23;
		--link-color-active: #000b26;
		--link-color-visited: #0c1923;
	}
}

/* layout */
html {
	padding: env(safe-area-inset);
}

body {
	font-family: 'IBM Plex Sans', Verdana, sans-serif;
	font-size: 18px;
	margin: 0;
	padding: 0;
	/* max-width: 65ch; */
	text-align: left;
	/* background: var(--color-bg);
	background: linear-gradient(
		180deg,
		var(--accent-color-1) 0%,
		var(--accent-color-1) 20%,
		var(--accent-color-2) 20%,
		var(--accent-color-2) 40%,
		var(--accent-color-3) 40%,
		var(--accent-color-3) 60%,
		var(--accent-color-4) 60%,
		var(--accent-color-4) 80%,
		var(--accent-color-5) 80%,
		var(--accent-color-5) 100%
	); */
	background: var(--main-bg);
	background: var(--main-bg-gradient);
	word-wrap: break-word;
	overflow-wrap: break-word;
	line-height: 1.5;
}

body.new-order {
	display: grid;
	grid-template-columns: 1fr 8vw;
	min-height: 100vh;
}

main {
	max-width: var(--content-max-width);
}

.page {
	/* position: relative; */
	color: var(--main-fg);
	min-height: 100vh;
	min-width: 0px;
	padding: 1vw 6vw 8vw;
}

section > h1:first-child,
section > h2:first-child {
	margin-top: 0;
}

/* default colors and fonts */
h1,
h2,
h3,
h4,
h5,
h6,
strong,
b {
	font-family: 'IBM Plex Serif Bold', Georgia, serif;
	margin-bottom: 0.25em;
	color: var(--main-fg);
}

a {
	color: var(--link-color-initial);
}
a:hover,
a:active,
a:focus {
	color: var(--link-color-active);
}
a:visited {
	color: var(--link-color-visited);
}

nav a {
	margin-right: 10px;
}

textarea {
	width: 100%;
	font-size: 16px;
}
input {
	font-size: 16px;
}
content {
	line-height: 1.6;
}
table {
	width: 100%;
}
img {
	max-width: 100%;
	height: auto;
}

strong,
b {
	font-family: 'IBM Plex Sans Bold', Verdana, sans-serif;
	font-weight: 700;
}

code {
	padding: 2px 5px;
	font-family: 'Courier New', Courier, monospace;
	background-color: var(--main-bg);
}
pre {
	padding: 1rem;
	max-width: 100%;
	overflow-x: auto;
}

pre > code {
	all: unset;
}

cite,
.sig {
	font-style: italic;
}

blockquote {
	border: 1px solid var(--main-fg);
	color: var(--main-fg);
	padding: 2px 0px 2px 20px;
	margin: 0px;
	font-style: italic;
}

button {
	color: inherit;
	background: inherit;
	border: 1px solid currentColor;
	font-size: inherit;
	padding: 0.25em;
	margin: 0.2em;
}

button:active {
	color: var(--main-bg);
	background: var(--accent-color-1);
}

a[data-footnote-ref] {
	font-size: 0.9em;
	padding: 0.2em;
}

span.subhead {
	display: block;
	margin-bottom: 0.75rem;
}

/* inline svg icons are cool */
.icon {
	display: flex;
	align-items: center;
	justify-content: center;
	width: 1.5rem;
	height: 1.5rem;
}

.icon svg {
	fill: currentColor;
	max-width: 100%;
	max-height: 100%;
}

.icon.inline {
	display: inline-flex;
	vertical-align: text-bottom;
	margin: 0 0.2em;
}

/* am i wrong? */
.right {
	text-align: right;
}

.formatted_time {
	font-style: italic;
}

/* hiding duplicate horizontal rules. don't ask. ¯\_(ツ)_/¯ */
hr + hr {
	display: none;
}

/* progressive separator styles */
.separator {
	display: block;
	border-style: none;
	height: var(--base-pad);
	margin-bottom: var(--base-gap);
}

.separator:nth-of-type(5n + 1) {
	background: var(--accent-color-1);
}

.separator:nth-of-type(5n + 2) {
	background: var(--accent-color-2);
}

.separator:nth-of-type(5n + 3) {
	background: var(--accent-color-3);
}

.separator:nth-of-type(5n + 4) {
	background: var(--accent-color-4);
}

.separator:nth-of-type(5n + 5) {
	background: var(--accent-color-5);
}

/* styled lists */
ul.styled-list {
	list-style-type: none;
	padding-left: 0;

	&:last-child {
		margin-bottom: 0;
	}

	li {
		margin-bottom: 2rem;
		padding-left: clamp(0.5em, 2vw, 4vw);
		font-size: medium;
		font-size: inherit;
		border-left-width: var(--base-pad);
		border-left-style: solid;

		&:nth-child(5n + 1) {
			border-color: var(--accent-color-1);
		}

		&:nth-child(5n + 2) {
			border-color: var(--accent-color-2);
		}

		&:nth-child(5n + 3) {
			border-color: var(--accent-color-3);
		}

		&:nth-child(5n + 4) {
			border-color: var(--accent-color-4);
		}

		&:nth-child(5n + 5) {
			border-color: var(--accent-color-5);
		}

		&:last-child {
			margin-bottom: 0;
		}
	}

	&.opposite li {
		padding-left: 0;
		padding-right: clamp(0.5em, 2vw, 4vw);
		border-left-width: 0;
		border-right-width: var(--base-pad);
		border-right-style: solid;
	}

	.post_data {
		display: flex;
		justify-content: space-between;
		align-items: center;
		&.unstack {
			display: block;
		}
		margin-bottom: 1rem;

		a {
			font-size: 1.4rem;
			font-weight: bold;
		}
	}
}

/* it's the future */
@media (prefers-reduced-motion: no-preference) {
	@view-transition {
		navigation: auto;
	}
}

/* font faces */
@font-face {
	font-family: 'IBM Plex Sans';
	font-style: normal;
	font-weight: 400;
	font-display: swap;
	src:
		local('IBM Plex Sans Regular'),
		local('IBMPlexSans-Regular'),
		url('/fonts/IBMPlexSans-Regular.woff2') format('woff2'),
		url('/fonts/IBMPlexSans-Regular.woff') format('woff');
}

@font-face {
	font-family: 'IBM Plex Sans Bold';
	font-style: normal;
	font-weight: 700;
	font-display: swap;
	src:
		local('IBM Plex Sans Bold'),
		local('IBMPlexSans-Bold'),
		url('/fonts/IBMPlexSans-Bold.woff2') format('woff2'),
		url('/fonts/IBMPlexSans-Bold.woff') format('woff');
}

@font-face {
	font-family: 'IBM Plex Sans Italic';
	font-style: normal;
	font-weight: 400;
	font-display: swap;
	src:
		local('IBM Plex Sans Italic'),
		local('IBMPlexSans-Italic'),
		url('/fonts/IBMPlexSans-Italic.woff2') format('woff2'),
		url('/fonts/IBMPlexSans-Italic.woff') format('woff');
}

@font-face {
	font-family: 'IBM Plex Serif';
	font-style: normal;
	font-weight: 700;
	font-display: swap;
	src:
		local('IBM Plex Serif'),
		local('IBMPlexSerif'),
		url('/fonts/IBMPlexSerif-Regular.woff2') format('woff2'),
		url('/fonts/IBMPlexSerif-Regular.woff') format('woff');
}

@font-face {
	font-family: 'IBM Plex Serif Bold';
	font-style: normal;
	font-weight: 700;
	font-display: swap;
	src:
		local('IBM Plex Bold Serif'),
		local('IBMPlexSerif-Bold'),
		url('/fonts/IBMPlexSerif-Bold.woff2') format('woff2'),
		url('/fonts/IBMPlexSerif-Bold.woff') format('woff');
}

